---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/group/equation_missing_end.txt
---
ROOT@0..28
  PREAMBLE@0..28
    ENVIRONMENT@0..28
      BEGIN@0..10
        COMMAND_NAME@0..6 "\\begin"
        CURLY_GROUP_WORD@6..10
          L_CURLY@6..7 "{"
          KEY@7..8
            WORD@7..8 "a"
          R_CURLY@8..9 "}"
          WHITESPACE@9..10 " "
      EQUATION@10..21
        COMMAND_NAME@10..12 "\\["
        WHITESPACE@12..13 " "
        TEXT@13..21
          WORD@13..16 "foo"
          WHITESPACE@16..17 " "
          WORD@17..20 "bar"
          WHITESPACE@20..21 " "
      END@21..28
        COMMAND_NAME@21..25 "\\end"
        CURLY_GROUP_WORD@25..28
          L_CURLY@25..26 "{"
          KEY@26..27
            WORD@26..27 "b"
          R_CURLY@27..28 "}"

